@@ -146,10 +146,14 @@ typedef enum libspectrum_id_t {
   LIBSPECTRUM_ID_COMPRESSED_BZ2,	/* bzip2 compressed file */
   LIBSPECTRUM_ID_COMPRESSED_GZ,		/* gzip compressed file */
 
-  /* Below here, present only in [FIXME] and later */
+  /* Below here, present only in 0.2.2 and later */
 
   LIBSPECTRUM_ID_HARDDISK_HDF,		/* .hdf hard disk image */
   LIBSPECTRUM_ID_CARTRIDGE_IF2,		/* .rom Interface II cartridge image */
+
+  /* Below here, present only in [FIXME] and later */
+
+  LIBSPECTRUM_ID_MICRODRIVE_MDR,	/* .mdr microdrive cartridge */
 
 } libspectrum_id_t;
 
@@ -169,10 +173,14 @@ typedef enum libspectrum_class_t {
 
   LIBSPECTRUM_CLASS_COMPRESSED,		/* A compressed file */
 
-  /* Below here, present only in [FIXME] and later */
+  /* Below here, present only in 0.2.2 and later */
 
   LIBSPECTRUM_CLASS_HARDDISK,		/* A hard disk image */
   LIBSPECTRUM_CLASS_CARTRIDGE_IF2,	/* Interface II cartridges */
+
+  /* Below here, present only in [FIXME] and later */
+
+  LIBSPECTRUM_CLASS_MICRODRIVE,		/* Microdrive cartridges */
 
 } libspectrum_class_t;
 
